<resources>
    <string name="app_name">DemoApp</string>
    <string name="let_s_walk">Let\'s Walk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home</string>
    <string name="friends_blank_fragment">Friends</string>
    <string name="family_blank_fragment">Family</string>
    <string name="homeTab">Home</string>
    <string name="familyTab">Family</string>
    <string name="friendsTab">Friends</string>
    <string name="notification">Notification</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="rotate">rotate</string>
    <string name="blink">Blink</string>
    <string name="move">Move</string>
    <string name="flip">Flip</string>
    <string name="moveobject">Move</string>
    <string name="zoom">Zoom</string>
    <string name="roomdatabase">Room Data base</string>
    <string name="display_data">display Data</string>

    <string name="enter_task_description">Enter Task Description</string>


    //room database task string


    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="confirm_password">confirm password</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="add_task">Task Details</string>
    <string name="add_task_to_table">Add Task To task Table</string>
    <string name="hello_msg">Hello</string>
    <string name="log_out_text">Logout</string>
    <string name="add_task_to_the_table">Add task to the table</string>
    <string name="submit_task">submit</string>
    <string name="cancel_task">Cancel</string>

    <string name="update_task">Update</string>
    <string name="delete_task">Delete</string>
    <string name="alert_header">Alert!!</string>
    <string name="ok">OK</string>
    <string name="log_out_msg">Log Out</string>

    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="room_data_base_demo">Room data base demo</string>
    <string name="progress_indicator">10%</string>


    <string name="room_demo_name">Room Database</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_notification_channel_id">notification_demo</string>


</resources>