<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".animation.AnimationActivity">

    <ImageView
        android:id="@+id/ivCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/home_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rotate"
        app:layout_constraintEnd_toStartOf="@id/btnBlink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCopyright" />

    <Button
        android:id="@+id/btnBlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/blink"
        app:layout_constraintEnd_toStartOf="@+id/btnMove"
        app:layout_constraintStart_toEndOf="@id/btnRotate"
        app:layout_constraintTop_toBottomOf="@id/ivCopyright"
        app:layout_constraintTop_toTopOf="@id/btnRotate" />

    <Button
        android:id="@+id/btnMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBlink"
        app:layout_constraintTop_toTopOf="@id/btnBlink" />

    <Button
        android:id="@+id/btnObjectZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip"
        app:layout_constraintEnd_toStartOf="@id/btnObjectMove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRotate" />

    <Button
        android:id="@+id/btnObjectMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveobject"
        app:layout_constraintEnd_toStartOf="@id/btnObjectScale"
        app:layout_constraintStart_toEndOf="@id/btnObjectZoom"
        app:layout_constraintTop_toBottomOf="@id/btnBlink" />

    <Button
        android:id="@+id/btnObjectScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnObjectMove"
        app:layout_constraintTop_toBottomOf="@id/btnMove" />

</androidx.constraintlayout.widget.ConstraintLayout>