<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_alert_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out_msg"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:textColor="@color/tv_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_reconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@color/tv_text_color"
        android:text="@string/are_you_sure_you_want_to_logout"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btnStyle"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reconfirm"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btnStyle"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reconfirm"
        />






</androidx.constraintlayout.widget.ConstraintLayout>