<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_alert_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/room_demo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
      />

    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:inputType="textCapWords"
        android:autofillHints="password"
        android:hint="@string/task_title"
        app:layout_constraintStart_toStartOf="@id/tv_alert_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_dialog_title" />
    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:autofillHints="text"
        style="@style/EditTextStyle"
        android:hint="@string/task_description"
        app:layout_constraintStart_toStartOf="@id/et_task_title"
        app:layout_constraintTop_toBottomOf="@id/et_task_title" />





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/alertBtnStyle"
        tool:text="cancel"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_description"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/alertBtnStyle"
        tool:text="@string/submit_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_description"

        />

</androidx.constraintlayout.widget.ConstraintLayout>